<resources>
    <string name="app_name">PizzaPartyApp</string>
    <string name="num_people">Number of people?</string>
    <string name="hint_edit_text"># of people</string>
    <string name="light">Light</string>
    <string name="hungry_level">How hungry?</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>

</resources>