<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/linear_layout_padding"
    android:paddingLeft="@dimen/linear_layout_padding"
    android:paddingRight="@dimen/linear_layout_padding"
    android:paddingTop="@dimen/linear_layout_padding"
    android:background="@drawable/pizza_image_app"
    tools:context="com.example.pizzapartyapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_people"
        android:textSize="@dimen/num_people_text_size"
        android:labelFor="@id/number_of_people_edit_text"
        android:textColor="@color/teal_700"/>

    <EditText
        android:id="@+id/number_of_people_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_min_height"
        android:inputType="number"
        android:hint="@string/hint_edit_text"
        android:ems="5"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/hungry_level"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/how_hungry_radio_group" />

    <RadioGroup
        android:id="@+id/how_hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/total_number_of_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:textSize="@dimen/text_view_text_size"
        android:textColor="@color/teal_200"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        style="@style/CalcButton"
        android:onClick="calculateClick" />
</LinearLayout>